force-app/main/default/objects/custom_create158__c/custom_create158__c.object-meta.xml
<CustomObject>
    <label>Custom created object158</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects158</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>