force-app/main/default/objects/custom_create158__c/fields/custom_create_158field501__c.field-meta.xml
<CustomField>
    <fullName>custom_create_158field501__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 158field501</label>
    <type>Checkbox</type>
</CustomField>