force-app/main/default/objects/custom_create158__c/fields/custom_create_158field630__c.field-meta.xml
<CustomField>
    <fullName>custom_create_158field630__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 158field630</label>
    <type>Checkbox</type>
</CustomField>